# AI/src/models/main.py
@@ -1,0 +1,8 @@
+from pydantic import BaseModel
+
+class RootResponse(BaseModel):
+    message: str
+
+class HealthCheckResponse(BaseModel):
+    status: str
+    message: str
